# ChangeLog for app-text/tetex
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/tetex/Attic/ChangeLog,v 1.36 2003/03/14 22:52:14 satai Exp $

*tetex-2.0.2 (14 Mar 2003)

  14 Mar 2003; root <root@gentoo.org> tetex-2.0.2.ebuild,
  files/tetex-2.0.2-dont-run-config.diff, files/tetex-2.0.2.diff:
  Version bump.  Not many changes.  Still not using texmf-gg.

  25 Feb 2003; Guy Martin <gmsoft@gentoo.org> tetex-1.0.7-r10.ebuild :
  Added hppa to keywords.

  07 Feb 2003; Matthew Turk <satai@gentoo.org> :
  Config protect /usr/share/texmf/tex/generic/config/
  /usr/share/texmf/tex/platex/config/ in order to keep hyphenation patterns
  between updates.

  06 Feb 2003; Matthew Turk <satai@gentoo.org> :
  Re-enable vardir font creation.  This fixes letting ordinary users generate
  font metrics.

*tetex-2.0-r1 (05 Feb 2003)

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> tetex-2.0-r1.ebuild :
  Mark stable on Alpha

  05 Feb 2003; Matthew Turk <satai@gentoo.org> :
  Revision bump.  Added a patch to fix the local tree.  Also enabled a number
  of Babel formats.  Installation should be all fixed now, too.

  04 Feb 2003; Matthew Turk <satai@gentoo.org> : tetex-2.0.ebuild
  Fixed installation woes; will now manually remove /usr/share/texmf/dvipdfm if
  it exists.  This should clear up problems with conflicts between versions of
  dvipdfm storing configuration in slightly different fashions.

  05 Feb 2003; Martin Schlemmer <azarah@gentoo.org> tetex-2.0.ebuild :
  Updated to use epatch.

  03 Feb 2003; Matthew Turk <satai@gentoo.org> tetex-1.0.7-r12.ebuild :
  Fixed tetex-1.0.7-r12 to install manpages in correct location.  The make
  install function seems to be broken in 1.0.7, so I had to hardcode man1 into
  it.  This is not the case in 2.0.  Didn't bump revision so as to encourage
  testing of 2.0.

*tetex-2.0 (02 Feb 2003)
