@@ -1,27 +1,29 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/tetex/Attic/tetex-1.0.7-r9.ebuild,v 1.14 2003/03/11 21:11:45 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/tetex/Attic/tetex-1.0.7-r9.ebuild,v 1.15 2003/03/25 22:42:17 seemant Exp $
+
+IUSE="X libwww png"
 
 TEXMFSRC="teTeX-texmf-gg-1.0.3.tar.bz2"
 S=${WORKDIR}/teTeX-1.0
 
 DESCRIPTION="a complete TeX distribution"
+HOMEPAGE="http://tug.cs.umb.edu/tetex/"
 SRC_URI="ftp://sunsite.informatik.rwth-aachen.de/pub/comp/tex/teTeX/1.0/distrib/sources/teTeX-src-1.0.7.tar.gz
 	 ftp://ftp.dante.de/pub/tex/systems/unix/teTeX/1.0/contrib/ghibo/${TEXMFSRC}
 	 http://www.ibiblio.org/gentoo/distfiles/ec-ready-mf-tfm.tar.gz
 	 http://www.ibiblio.org/gentoo/distfiles/teTeX-french.tar.gz"
-HOMEPAGE="http://tug.cs.umb.edu/tetex/"
 
 SLOT="0"
-KEYWORDS="x86 ppc sparc"
 LICENSE="GPL-2" 
-IUSE="X ncurse libwww png"
+KEYWORDS="x86 ppc sparc"
 
 DEPEND="sys-apps/ed
 	sys-libs/zlib
 	X? ( virtual/x11 )
 	png? ( >=media-libs/libpng-1.2.1 )
 	libwww? ( >=net-libs/libwww-5.3.2-r1 )"
+
 RDEPEND=">=dev-lang/perl-5.2
 	dev-util/dialog"
 
