@@ -1,6 +1,6 @@
 # ChangeLog for app-text/tetex
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/tetex/Attic/ChangeLog,v 1.36 2003/03/14 22:52:14 satai Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/tetex/Attic/ChangeLog,v 1.37 2003/03/25 22:42:17 seemant Exp $
 
 *tetex-2.0.2 (14 Mar 2003)
 
@@ -146,6 +146,9 @@
   headers.  This closes bug #3928 by fatwreckfan@hotmail.com (Mark Trolley)
 
 *tetex-1.0.7-r9 (24 Apr 2002)
+
+  25 Mar 2003; Seemant Kulleen <seemant@gentoo.org> tetex-1.0.7-r9.ebuild:
+  removed ncurse from IUSE
 
   2 Aug 2002; phoen][x <phoenix@gentoo.org> tetex-1.0.7-r9.ebuild :
   Added SLOT.
